Dev_mythip@capgemini.com_17Dec_ForGitSync/src/objects/UnivStudent__c.object
<CustomObject>
    <fields>
        <fullName>Average__c</fullName>
        <formula>(English__c  +  Maths__c + Science__c ) / 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Days__c</fullName>
        <label>Course Days</label>
        <picklist>
            <controllingField>Education_Mode__c</controllingField>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>IF(ISPICKVAL( Education_Mode__c ,&quot;Full Time&quot;),10,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Education_Mode__c</fullName>
        <label>Education Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>English__c</fullName>
        <label>English</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maths__c</fullName>
        <label>Maths</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Science__c</fullName>
        <label>Science</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_Id__c</fullName>
        <label>Student Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <inlineHelpText>Student Name</inlineHelpText>
        <label>Student Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Marks__c</fullName>
        <label>Total Marks</label>
        <summarizedField>UnivMarks__c.Marks__c</summarizedField>
        <summaryFilterItems>
            <field>UnivMarks__c.Marks__c</field>
            <operation>greaterThan</operation>
            <value>70</value>
        </summaryFilterItems>
        <summaryForeignKey>UnivMarks__c.UnivStudent__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>UnivStudent</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Student_Name__c</columns>
        <columns>isActive__c</columns>
        <columns>English__c</columns>
        <columns>Maths__c</columns>
        <columns>Science__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Student Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UnivStudents</pluralLabel>
    <recordTypes>
        <fullName>Fulltime_Student</fullName>
        <active>true</active>
        <label>Fulltime Student</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parttime_Student</fullName>
        <active>true</active>
        <label>Parttime Student</label>
    </recordTypes>
    <recordTypes>
        <fullName>Staff</fullName>
        <active>true</active>
        <label>Staff</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>